# python-template

./: .bumpversion.cfg  .editorconfig  .gitignore  .justfile  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yaml  README.md  copier.yml  create-python-package.py  ctt.toml  justfile  move_and_rename.py  notebook-template.py  notebook-template.py.jinja  pyproject.toml  tools.txt
.github/: dependabot.yml
.github/workflows/: pre-commit.yml  uv-tests.yml
dvc/: .pre-commit-config.yaml
dvc/scripts/: dvc_show.py  summarize_dvc_lock.py
extensions/: jinja2_gitconfig.py  jinja2_shell.py
misc/: notebook-template.py.jinja  tools.txt  xdg_dirs.py
misc/dvc/scripts/: dvc_diff.py  sort_dvc_lock.py
my-project/: .gitignore  .pre-commit-config.yaml  README.md  init-poetry.sh  init-uv.sh  init.sh  pyproject.toml
my-project/.github/workflows/: black.yml  lint.yml  pre-commit.yml
my-project/my_package/: __main__.py
my-project/tests/: test_.py
my_package/: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  README.md  init-poetry.sh  init-uv.sh  init.sh  pyproject.toml
my_package/.github/workflows/: black.yml  pre-commit.yml
my_package/my_package/: cli.py
my_project/: README.md
my_project/my_package/: __main__.py
project_name/: .editorconfig  .editorconfig.jinja  .gitignore.jinja  .justfile.jinja  .pre-commit-config.yaml  .pre-commit-config.yaml.jinja  .python-version.jinja  CHANGELOG.md.jinja  CONTRIBUTING.md.jinja  README.md  README.md.jinja  copier.yml  init.sh  init.sh.jinja  justfile.jinja  mkdocs.yml.jinja  pyproject.toml  pyproject.toml.jinja  zensical.toml.jinja  {% if ci=="poe" %}poe_tasks.toml{% endif %}.jinja  {% if in_rtd %}.readthedocs.yaml{% endif %}.jinja  {% if license=='MIT' %}LICENSE{% endif %}.jinja
project_name/.github/: CONTRIBUTING.md.jinja
project_name/.github/workflows/: ci.yml.jinja  deps-update.yml  lint.yml.jinja  lint_and_test.yml.jinja  pre-commit.yml  pre-commit.yml.jinja  scheduled-test.yml.jinja  test_python_prerelease.yml.jinja  tests.yml.jinja  weekly-ci.yml.jinja  {% if in_pypi %}build-and-publish.yml{% endif %}.jinja
project_name/docs/: index.md.jinja
project_name/src/{{package_name}}/: __init__.py.jinja  {% if cli_framework == 'cyclopts' %}cli.py{% endif %}.jinja  {% if cli_framework == 'typer' %}cli.py{% endif %}.jinja  {% if has_cli %}__main__.py{% endif %}.jinja  {% if has_cli %}cli.py{% endif %}.jinja
project_name/src{{_copier_conf.sep}}{{package_name}}/: __init__.py.jinja  {% if is_cli %}__main__.py{% endif %}.jinja  {% if is_cli %}cli.py{% endif %}.jinja
project_name/tests/: test_.py.jinja  {% if cli_framework == 'cyclopts' %}test_cli.py{% endif %}.jinja  {% if cli_framework == 'typer' %}test_cli.py{% endif %}.jinja  {% if cli_framework == 'typer' %}test_main.py{% endif %}.jinja  {% if has_cli %}test_cli.py{% endif %}.jinja  {% if is_cli %}test_cli.py{% endif %}.jinja
project_name/{{package_name}}/: __init__.py  __main__.py  cli.py.jinja  {% if is_cli %}__main__.py{% endif %}.jinja  {% if is_cli %}cli.py{% endif %}.jinja
python-template/: .gitignore  .pre-commit-config.yaml
