[tool.poetry]
name = "python-template"
version = "0.0.0"
description = ""
authors = ["Tsvika S <tsvikas@github>"]
# optional settings:
license = "AGPL-3.0-or-later"  # or use "MIT"
readme = "README.md"
homepage = "https://python-template.org/"
repository = "https://github.com/tsvikas/python-template"
documentation = "https://python-template.org/docs/"
packages = [{include = "python_template"}]
# TODO: src path
# TODO: check isort works well with known_first_party
# TODO: add hatch option

[tool.poetry.scripts]
my-script = "python_template.__main__:main"

[tool.poetry.extras]
# add optional dependency groups here

[tool.poetry.dependencies]
python = "~3.11"

[tool.poetry.group.dev.dependencies]
bump2version = "^1"
pre-commit = "^3"
# TODO: add balck-d/jupyter support
black = "^23"
ruff = "^0.0.270"

[tool.poetry.group.typing.dependencies]
mypy = "^1"

[tool.poetry.group.testing.dependencies]
pytest = "^7"
# TODO: add some kind of doctesting
# TODO: maybe add hypothesis
pytest-clarity = "^1"
pytest-cov = "^4"
#pytest-datadir = "^1"
pytest-pretty = "^1"
pytest-reverse = "^1"

[tool.poetry.group.jupyter.dependencies]
jupyterlab = "^4"
jupytext = "^1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
target-version = ["py311"]
preview = true


[tool.ruff]
select = ["ALL"]
ignore = [
    # not compatible with black:
    "COM812",   # flake8-commas/missing-trailing-comma
    # incompatible pairs. choose 1:
    # "D203",     # pydocstyle/one-blank-line-before-class 
    "D211",     # pydocstyle/no-blank-line-before-class
    "D212",     # pydocstyle/multi-line-summary-first-line
    # "D213",     # pydocstyle/multi-line-summary-second-line
    # wrong:
    "PD010",    # pandas-vet/pandas-use-of-dot-pivot-or-unstack
    "PD013",    # pandas-vet/pandas-use-of-dot-stack
    "EM",       # flake8-errmsg
    # irrelevant:
    "RET504",   # flake8-return/unnecessary-assign
    # very costly to maintain:
    "ANN",      # flake8-annotations
    "D1",       # pydocstyle/undocumented-*
    # ban something useful for a good reason
    # "C901",     # mccabe/complex-structure
    # "S101",     # flake8-bandit/assert
    # "FBT002",   # flake8-boolean-trap/boolean-default-value-in-function-definition
    # "DTZ",      # flake8-datetimez
    # "ERA001",   # eradicate/commented-out-code
    # "PLR091",   # PyLint-Refactor/too-many-*
    # "PLW2901",  # PyLint-Warning/redefined-loop-name
    # "TRY003",   # tryceratops/raise-vanilla-args
]
target-version = "py311"

[tool.ruff.per-file-ignores]
"tests/*.py" = [
    "PLR2004",  # PyLint-Refactor/magic-value-comparison
    "S101",  # flake8-bandit/assert
]


[tool.poe.tasks]
_commit-release = "bump2version release --commit --tag"
_commit-post-release = "bump2version release --commit"

[tool.poe.tasks.bump2version]
help = "Update code version"
cmd  = "bump2version"

[tool.poe.tasks.test]
help = "Run unit and feature tests"
cmd  = "pytest --cov=python_template"

[tool.poe.tasks.build]
help = "Create sdist and wheel"
cmd  = "poetry build"

[tool.poe.tasks.release]
help = "Realese a new version"
sequence  = ["test", "_commit-release", "build", "_commit-post-release"]

[tool.poe.tasks.black]
help = "Run black on the code base"
cmd  = "pre-commit run --all-files black"

[tool.poe.tasks.format]
help = "Run formating tools on the code base"
sequence  = ["black"]

[tool.poe.tasks.ruff]
help = "Run ruff on the code base"
cmd  = "pre-commit run ruff check ."

[tool.poe.tasks.mypy]
help = "Run mypy on the code base"
cmd  = "pre-commit run mypy"

[tool.poe.tasks.check]
help = "Run validation tools on the code base"
sequence  = ["ruff", "mypy"]

