[tool.poetry]
# TODO: check that isort works well with known_first_party
# TODO: add hatch option
name = "python-template"
version = "0.0.0"
# TODO: add option to get version from git tag
# TODO: see https://github.com/mtkennerly/poetry-dynamic-versioning
description = ""
authors = ["Tsvika S <tsvikas@gmail.com>"]
# optional settings:
license = "AGPL-3.0-or-later"  # or use "MIT"
readme = "README.md"
homepage = "https://python-template.org/"
repository = "https://github.com/tsvikas/python-template"
documentation = "https://python-template.org/docs/"
# {use if package name != package stub, or package is in a specific dir}
# packages = [{include = "python_template", from = "src"}]

[tool.poetry.scripts]
my-script = "python_template.__main__:main"

[tool.poetry.extras]
# TODO: add template for optional dependency groups

[tool.poetry.dependencies]
python = "~3.11"

[tool.poetry.group.dev.dependencies]
bump2version = "^1"
pre-commit = "^3"
black = "^23"
ruff = "^0.1.0"

[tool.poetry.group.typing.dependencies]
mypy = "^1"
# pandas-stubs = "*"

[tool.poetry.group.testing.dependencies]
pytest = "^7"
pytest-clarity = "^1"
pytest-cov = "^4"
pytest-pretty = "^1"
pytest-reverse = "^1"
# pytest-datadir = "^1.5"
# hypothesis = "^6"

[tool.poetry.group.jupyter.dependencies]
jupyterlab = "^4"
matplotlib = "*"
hvplot = "*"
ipywidgets = "*"
python-lsp-server = "*"
jupytext = "*"
# jupyter-collaboration = "^1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "--doctest-modules"


[tool.mypy]
mypy_path = "stubs"
packages = "python_template"
strict = true


[tool.black]
target-version = ["py311"]
preview = false


[tool.ruff]
select = ["ALL"]
ignore = [
    # important, unignore when possible:
    "ANN",      # flake8-annotations
    "D1",       # pydocstyle/undocumented-*
    # needed only in large codebases
    "TD002",    # flake8-todos/missing-todo-author
    "TD003",    # flake8-todos/missing-todo-link
    # incompatible with other rules
    "D203",     # pydocstyle/one-blank-line-before-class, incompatible D211
    "D212",     # pydocstyle/multi-line-summary-first-line, incompatible D213
    "D400",     # pydocstyle/ends-in-period, incompatible D415
    "COM812",   # flake8-commas/missing-trailing-comma, incompatible with black
    # wrong:
    "PD010",    # pandas-vet/pandas-use-of-dot-pivot-or-unstack
    "PD013",    # pandas-vet/pandas-use-of-dot-stack
    "EM",       # flake8-errmsg
    # annoying:
    "RET504",   # flake8-return/unnecessary-assign
    "ANN1",     # flake8-annotations/missing-type-self,missing-type-cls
    # ban something useful for a good reason
    # "C901",     # mccabe/complex-structure
    # "S101",     # flake8-bandit/assert
    # "FBT001",   # flake8-boolean-trap/boolean-type-hint-positional-argument
    # "FBT002",   # flake8-boolean-trap/boolean-default-value-positional-argument
    # "DTZ",      # flake8-datetimez
    # "PD901",    # pandas-vet/pandas-df-variable-name
    # "FIX",      # flake8-fixme
    # "ERA001",   # eradicate/commented-out-code
    # "PLR091",   # PyLint-Refactor/too-many-*
    # "TRY003",   # tryceratops/raise-vanilla-args
]
target-version = "py311"

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.per-file-ignores]
"tests/*.py" = [
    "PLR2004",  # PyLint-Refactor/magic-value-comparison
    "S101",  # flake8-bandit/assert
]


[tool.poe.tasks]
_commit-release = "bump2version release --commit --tag"
_commit-post-release = "bump2version release --commit"

[tool.poe.tasks.bump2version]
help = "Update code version"
cmd  = "bump2version"

[tool.poe.tasks.test]
help = "Run unit and feature tests"
cmd  = "pytest --cov=python_template"

[tool.poe.tasks.build]
help = "Create sdist and wheel"
cmd  = "poetry build"

[tool.poe.tasks.release]
help = "Realese a new version"
sequence  = ["test", "_commit-release", "build", "_commit-post-release"]

[tool.poe.tasks.black]
help = "Run black on the code base"
cmd  = "pre-commit run --all-files black"

[tool.poe.tasks.format]
help = "Run formating tools on the code base"
sequence  = ["black"]

[tool.poe.tasks.ruff]
help = "Run ruff on the code base"
cmd  = "pre-commit run ruff check ."

[tool.poe.tasks.mypy]
help = "Run mypy on the code base"
cmd  = "pre-commit run mypy"

[tool.poe.tasks.check]
help = "Run validation tools on the code base"
sequence  = ["ruff", "mypy"]
