[project]
name = "python-template"
version = "0.1.0"
requires-python = ">=3.10.11"

[dependency-groups]
dev = [
  "copier-template-tester>=2.3.0",
  "pre-commit>=4.4.0",
]

[tool.uv]
required-version = ">=0.10.12"
# Minimum age guard: only consider package versions released at least 24h ago,
# as a lightweight supply-chain defense against just-published malicious releases.
exclude-newer = "24 hours"
